force-app/main/default/objects/Delivery_Attempt__c/Delivery_Attempt__c.object-meta.xml
<CustomObject>
    <label>Delivery Attempt</label>
    <nameField>
        <displayFormat>ATT-{000000}</displayFormat>
        <label>Attempt Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Attempts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>