force-app/main/default/objects/Delivery_Attempt__c/fields/Attempt_By__c.field-meta.xml
<CustomField>
    <fullName>Attempt_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attempt By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Delivery_Attempts</relationshipName>
    <type>Lookup</type>
</CustomField>