force-app/main/default/objects/Delivery_Attempt__c/fields/Attempt_Completion_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Completion_Date_Time__c</fullName>
    <description>End of the attempt. Required when attempt is completed — enforce via validation rule since requirement is conditional.</description>
    <label>Attempt Completed</label>
    <type>DateTime</type>
</CustomField>