force-app/main/default/objects/Delivery_Attempt__c/fields/Attempt_Initiation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Initiation_Date_Time__c</fullName>
    <description>Beginning of the attempt.</description>
    <label>Attempt Initiated</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>