force-app/main/default/objects/Delivery_Attempt__c/fields/Attempt_Status__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Status__c</fullName>
    <description>Attempt outcome. Final picklist list is TBD by BA — confirm before deploying to production.</description>
    <label>Attempt Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Could Not Complete</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Bad Address</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>