force-app/main/default/objects/Delivery_Attempt__c/fields/Declaration_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Obtained__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Declaration or certificate obtained.</description>
    <label>Declaration Obtained</label>
    <type>Checkbox</type>
</CustomField>