force-app/main/default/objects/Delivery_Attempt__c/fields/Mileage__c.field-meta.xml
<CustomField>
    <fullName>Mileage__c</fullName>
    <description>Mileage for attempt.</description>
    <label>Mileage</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>