force-app/main/default/objects/Delivery_Attempt__c/fields/Outcome_Notes__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Notes__c</fullName>
    <description>Attempt-specific result.</description>
    <label>Outcome Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>