force-app/main/default/objects/Delivery_Attempt__c/fields/Pages_Copied__c.field-meta.xml
<CustomField>
    <fullName>Pages_Copied__c</fullName>
    <description>Pages copied during attempt.</description>
    <label>Pages Copied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>