force-app/main/default/objects/Delivery_Attempt__c/fields/Served_Or_Delivered_To__c.field-meta.xml
<CustomField>
    <fullName>Served_Or_Delivered_To__c</fullName>
    <description>Recipient snapshot. Required when attempt is completed — enforce via validation rule since requirement is conditional.</description>
    <label>Served or Delivered To</label>
    <length>150</length>
    <type>Text</type>
</CustomField>