force-app/main/default/objects/Delivery_Attempt__c/fields/Should_Retry_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Should_Retry_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates another attempt is required.</description>
    <label>Should Retry Delivery</label>
    <type>Checkbox</type>
</CustomField>